# wb_supply_bot

./: .gitignore  README.md  pyproject.toml
wb_zero_supply/: APICache.py  RedisManager.py  bot.py  bot_easy.py  check_stock_wb.py  get_stock_wb_from_api.py  get_stock_wb_from_domen.py  get_warehouses_wb.py  main.py
wb_zero_supply/scripts/: __init__.py  decorators.py
